--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "icons":[
     {"src":"/icon.png","sizes":"512x512","type":"image/png"}
   ],
-  "start_url":"/index.html?v=2",
+  "start_url":"/",
   "display":"standalone",
   "background_color":"#090f1e",
   "scope":".",
